--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,16 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
-  </head>
-
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+  <head>
+  
+</head>
   <body>
     <!-- Top nav bar (fixed) -->
     <nav class="topnav">
