--- a/public/index.html
+++ b/public/index.html
@@ -1,70 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Meta Information -->
-    <title>Tweeter - Home Page</title>
 
-    <!-- External CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" referrerpolicy="no-referrer" />
+<head>
+  <!-- Meta Information -->
+  <title>Tweeter - Home Page</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,600;1,600&display=swap" rel="stylesheet"> 
+  <!-- External CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    referrerpolicy="no-referrer" />
 
-    <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    type="text/css" />
 
-    <!-- External JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,600;1,600&display=swap"
+    rel="stylesheet">
 
-    <!-- App JS -->
-    <script type="text/javascript" src="/scripts/client.js"></script>
-    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
-  <head>
-  
-</head>
-  <body>
-    <!-- Top nav bar (fixed) -->
-    <nav class="topnav">
-      <span id='tweeter'>Tweeter</span>
-      <div>
+  <!-- App CSS -->
+  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/tweetContainer.css" type="text/css" />
+
+
+  <!-- External JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+  <!-- App JS -->
+  <script type="text/javascript" src="/scripts/client.js"></script>
+  <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+<body>
+  <!-- Top nav bar (fixed) -->
+  <nav class="topnav">
+    <span id='tweeter'>Tweeter</span>
+    <div>
       <span><b>Write</b> a new tweet!</span>
       <i class="fas fa-angle-double-down"></i>
     </div>
-    </nav>
-    <main class='main'>
-      <section class="new-tweet">
-        <h2>Compose Tweet</h2>
-        <form id = 'form' method="POST" action="/tweets/">
-          <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
-          <button id='button' type="submit">Tweet</button>
-          <div>
-            <output name="counter" class="counter" for="tweet-text">140</output>
-          </div>
-        </form>
-      </section>
-      
-      <p> Hodor. Hodor hodor, hodor. Hodor hodor hodor hodor hodor. Hodor. Hodor! Hodor hodor, hodor; hodor hodor hodor. Hodor. Hodor hodor; hodor hodor - hodor, hodor, hodor hodor. Hodor, hodor. Hodor. Hodor, hodor hodor hodor; hodor hodor; hodor hodor hodor! Hodor hodor HODOR! Hodor hodor... Hodor hodor hodor...</p>
-    </main>
-    <header>
-      <div>
-          <img src="/images/profile-hex.png"> 
-      </div>
-      <br>
-      <div>
-          <h2>Whomst</h2>
-      </div>
+  </nav>
+
+  <!-- Header -->
+  <header>
+    <div>
+      <img src="/images/profile-hex.png">
+    </div>
+    <br>
+    <div>
+      <h2>Whomst</h2>
+    </div>
   </header>
-  
-  
-</div>
-    <!-- Page-specific (main) content here -->
-    <main class="container"></main>
-  </body>
+
+  <!-- Page-specific (main) content here -->
+  <main class='container'>
+    <section class="new-tweet">
+      <form id='form' method="POST" action="/tweets/">
+        <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+        <button id='button' type="submit">Tweet</button>
+        <div>
+          <output name="counter" class="counter" for="tweet-text">140</output>
+        </div>
+      </form>
+    </section>
+
+
+    <section class="tweets">
+      <article>
+        <div>
+            <h3 class="name">Name</h3>
+            <p class="username">@username</p>
+        </div>
+          <p class="tweet-body">
+            Tweet content
+          </p>
+          <footer>
+            <p class="footer-text">10 days ago</p>
+            <div>
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </footer>
+        </article>
+      </section>
+
+ <section class="tweets">
+   <article>
+        <div>
+            <h3 class="name">Name</h3>
+            <p class="username">@username</p>
+        </div>
+          <p class="tweet-body">
+            Tweet content
+          </p>
+          <footer>
+            <p class="footer-text">10 days ago</p>
+            <div>
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+            </div>
+          </footer>
+        </article>
+      </section>
+</main>
+
 </html>
