--- a/public/index.html
+++ b/public/index.html
@@ -69,11 +69,12 @@
     <section class="tweets">
       <article>
         <div>
-            <h3 class="name">Name</h3>
-            <p class="username">@username</p>
+          <img class="avatar" src="https://i.imgur.com/73hZDYK.png">
+          <h3 class="name">newton</h3>
+          <p class="username">@newtonn</p>
         </div>
-          <p class="tweet-body">
-            Tweet content
+        <p class="tweet-body">
+            tweet tweet
           </p>
           <footer>
             <p class="footer-text">10 days ago</p>
@@ -88,11 +89,12 @@
  <section class="tweets">
    <article>
         <div>
-            <h3 class="name">Name</h3>
+          <img class="avatar" src="https://i.imgur.com/73hZDYK.png">
+            <h3 class="name">name</h3>
             <p class="username">@username</p>
         </div>
           <p class="tweet-body">
-            Tweet content
+            Tweet tweet
           </p>
           <footer>
             <p class="footer-text">10 days ago</p>
@@ -105,5 +107,4 @@
         </article>
       </section>
 </main>
-
 </html>
