--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js" integrity="sha512-SVDh1zH5N9ChofSlNAK43lcNS7lWze6DTVx1JCXH1Tmno+0/1jMpdbR8YDgDUfcUrPp1xyE53G42GFrcM0CMVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <!-- App JS -->
   <script type="text/javascript" src="/scripts/client.js"></script>
   <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
@@ -52,40 +54,41 @@
       <h2>Whomst</h2>
     </div>
   </header>
-
+  
   <!-- Page-specific (main) content here -->
+  
   <main class='container'>
-    <section class="new-tweet">
-      <form id='form' method="POST" action="/tweets/">
-        <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
-        <button id='button' type="submit">Tweet</button>
-        <div>
-          <output name="counter" class="counter" for="tweet-text">140</output>
-        </div>
-      </form>
-    </section>
+  <section class="new-tweet">
+    <form id='form' method="POST" action="/tweets/">
+      <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
+      <button id='button' type="submit">Tweet</button>
+      <div>
+        <output name="counter" class="counter" for="tweet-text">140</output>
+      </div>
+    </form>
+  </section>
+  
+<section class="tweet-container"></section>
 
-
-    <section class="tweets">
-      <article>
-        <div>
-          <img class="avatar" src="https://i.imgur.com/73hZDYK.png">
-          <h3 class="name">newton</h3>
-          <p class="username">@newtonn</p>
-        </div>
-        <p class="tweet-body">
-            tweet tweet
-          </p>
-          <footer>
-            <p class="footer-text">10 days ago</p>
-            <div>
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </footer>
-        </article>
-      </section>
-
+<!-- 
+<section class="tweets">
+  <article>
+    <div>
+      <img class="avatar" src="https://i.imgur.com/73hZDYK.png">
+      <h3>Newton</h3>
+      <p class="username">@SirIsaac</p>
+    </div>
+    <footer>
+      <div>
+        <p class="footer-text">Tue Apr 19 2016</p>
+        <i class="fas fa-flag"></i>
+        <i class="fas fa-retweet"></i>
+        <i class="fas fa-heart"></i>
+      </div>
+    </footer>
+  </article>
+</section>" -->
+<!--
  <section class="tweets">
    <article>
         <div>
@@ -105,6 +108,6 @@
             </div>
           </footer>
         </article>
-      </section>
+      </section> 
 </main>
 </html>
