form submission + loadingtweets

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
   
   <main class='container'>
   <section class="new-tweet">
-    <form id='form' method="POST" action="/tweets/">
+    <form id='form' method="POST" action="/tweets">
       <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
       <button id='button' type="submit">Tweet</button>
       <div>
@@ -87,8 +87,8 @@
       </div>
     </footer>
   </article>
-</section>" -->
-<!--
+</section>" 
+
  <section class="tweets">
    <article>
         <div>
