added error msg

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
   
   <main class='container'>
   <section class="new-tweet">
+    <p class="error"></p>
     <form id='form' method="POST" action="/tweets">
       <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
       <button id='button' type="submit">Tweet</button>
