--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+
   <!-- Meta Information -->
   <title>Tweeter - Home Page</title>
 
@@ -18,12 +21,12 @@
     rel="stylesheet">
 
   <!-- App CSS -->
-  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+  
   <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
   <link rel="stylesheet" href="/styles/header.css" type="text/css" />
   <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
   <link rel="stylesheet" href="/styles/tweetContainer.css" type="text/css" />
-
+  <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
   <!-- External JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -71,44 +74,5 @@
   
 <section class="tweet-container"></section>
 
-<!-- 
-<section class="tweets">
-  <article>
-    <div>
-      <img class="avatar" src="https://i.imgur.com/73hZDYK.png">
-      <h3>Newton</h3>
-      <p class="username">@SirIsaac</p>
-    </div>
-    <footer>
-      <div>
-        <p class="footer-text">Tue Apr 19 2016</p>
-        <i class="fas fa-flag"></i>
-        <i class="fas fa-retweet"></i>
-        <i class="fas fa-heart"></i>
-      </div>
-    </footer>
-  </article>
-</section>" 
 
- <section class="tweets">
-   <article>
-        <div>
-          <img class="avatar" src="https://i.imgur.com/73hZDYK.png">
-            <h3 class="name">name</h3>
-            <p class="username">@username</p>
-        </div>
-          <p class="tweet-body">
-            Tweet tweet
-          </p>
-          <footer>
-            <p class="footer-text">10 days ago</p>
-            <div>
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-            </div>
-          </footer>
-        </article>
-      </section> 
-</main>
 </html>
